 * Added getConditionalMarginalVariance method to KrigingResult
 * Deprecated OptimizationAlgorithm::GetLeastSquaresAlgorithmNames
 * Added linearity features to Function
 * Added 'removeKey' method to ResourceMap
 * Removed Copula class
 * Deprecated Event class, use ThresholdEvent/ProcessEvent/DomainEvent classes
 * Deprecated EnumerateFunction constructors

=== Python module ===
 * Add Domain.__contains__ operator

=== Miscellaneous ===
 * Add GeneralizedPareto location parameter
 * Add getSobolGroupedTotalIndex method for FunctionalChaosSobolIndices for the indice of a group of variables

=== Bug fixes ===
 * https://github.com/openturns/openturns/milestone/4?closed=1
 * #997 (Adding minimum volume set examples)
 * #1004 (The doc for SobolSimulationAlgorithm has issues)
 * #1006 (Text drawable does not handle size)
 * #1130 (Inconsistency in FittingTest)
 * #1185 (Bug with Normal.computeMinimumLevelSet method)
 * #1190 (computeProbability clamped by Domain-SmallVolume)
 * #1202 (Sample::sort & Sample::sortAccordingToAComponent only return new Samples)
 * #1209 (LinearModelStepwiseAlgorithm from otlm does not exist in OT)
 * #1216 (The CalibrationResult doc does not match the code)
 * #1247 (KrigingAlgorithm could not compute amplitude analytically with ProductCovarianceModel )


== 1.13 release (2019-06-06) == #release-1.13

=== Library ===

==== Major changes ====
 * Added OPT++ solvers
 * Improved a lot the performace of all the Rosenblatt related computations
 * Added elementary calibration capabilities
 * Added CMinpack, Ceres Solver least-squares solvers

==== New classes ====
 * ParametricPointToFieldFunction
 * LinearModelResult, LinearModelAlgorithm, LinearModelAnalysis
 * OPTpp
 * NearestPointProblem, LeastSquaresProblem
 * CMinpack
 * Ceres
 * DiscreteMarkovChain
 * CalibrationAlgorithm, CalibrationResult, GaussianLinearCalibration, LinearLeastSquaresCalibration
 * NonLinearLeastSquaresCalibration, GaussianNonLinearCalibration
 * Hypergeometric
