@@ -65,6 +65,7 @@
  * Removed Copula class
  * Deprecated Event class, use ThresholdEvent/ProcessEvent/DomainEvent classes
  * Deprecated EnumerateFunction constructors
+ * Add a minimum probability accessor to SubsetSampling
 
 === Python module ===
  * Add Domain.__contains__ operator
